# JustRenderIt

./: .gitmodules  .hgeol  .hgignore  CMakeLists.txt  index.html  params.json
CMake/: FindFreeImage.cmake  JRI.cmake  PrecompiledHeader.cmake
Dependencies/Include/GL/: glut.h
Dependencies/Include/glm/core/: _detail.hpp
Dependencies/Include/gtest/: gtest-param-test.h.pump
Dependencies/Include/gtest/internal/: gtest-param-util-generated.h.pump  gtest-type-util.h.pump
Dependencies/Lib/: gtest.lib  gtest_main.lib
resources/shaders/: illum.cgfx
src/Addon/: jri_exporter.py
src/Addon/Blender/: jri_exporter.py
src/Demos/: CMakeLists.txt
src/Demos/HelloWorld/: CMakeLists.txt  HelloWorld.cpp  HelloWorld.h
src/Editor/: CMakeLists.txt
src/Framework/: CMakeLists.txt  Common.h  Platform.h  Resource.cpp  Resource.h
src/Framework/App/: AppBase.cpp  AppBase.h
src/Framework/App/Qt/: QtApp.cpp  QtApp.h
src/Framework/Common/: Resource.cpp
src/Framework/Graphics/: Camera.cpp  Camera.h  Effect.cpp  Effect.h  Image.cpp  Image.h  Pipeline.cpp  Pipeline.h  Renderer.cpp  Renderer.h  Texture.cpp  Texture.h
src/Framework/Graphics/OpenGL/: OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLTexture.cpp  OpenGLTexture.h  glew.c
src/Framework/Utils/: CVar.cpp  CVar.def  CVar.h  Logger.cpp  Logger.h  Singleton.h  Timer.cpp  Timer.h  Tokenizer.h  Util.cpp  Util.h  UtilLinux.h  UtilWin32.h
src/Tests/: CMakeLists.txt  test_cvar.cpp  test_cvar.txt  test_resource.cpp  test_singleton.cpp  test_tokenizer.cpp  test_tokenizer.cpp~  test_tokenizer.txt
