CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(Framework)

IF(MSVC)
  ADD_DEFINITIONS(-D_USRDLL)
ENDIF(MSVC)

# Find out all source files
FILE(GLOB APP_HEADER "App/*.h")
FILE(GLOB APP_SRC "App/*.cpp")

IF(WIN32)
  FILE(GLOB_RECURSE APP_WIN32_HEADER ${PROJECT_SOURCE_DIR}
    "App/Windows/*.h")
  FILE(GLOB_RECURSE APP_WIN32_SRC ${PROJECT_SOURCE_DIR}
    "App/Windows/*.cpp")
ENDIF(WIN32)

FILE(GLOB QT_HEADER "App/Qt/*.h")
FILE(GLOB QT_SRC "App/Qt/*.cpp")

# Deal with Qt files
QT4_WRAP_CPP(QT_GENERATED_SRC ${QT_HEADER})

FILE(GLOB_RECURSE ENTITY_HEADER "Entity/*.h")
FILE(GLOB_RECURSE ENTITY_SRC "Entity/*.cpp")

FILE(GLOB GRAPHICS_HEADER "Graphics/*.h")
FILE(GLOB GRAPHICS_SRC "Graphics/*.cpp")

FILE(GLOB_RECURSE OPENGL_HEADER ${PROJECT_SOURCE_DIR} "Graphics/OpenGL/*.h")
FILE(GLOB_RECURSE OPENGL_SRC ${PROJECT_SOURCE_DIR} "Graphics/OpenGL/*.cpp")
FILE(GLOB_RECURSE OPENGL_C_SRC ${PROJECT_SOURCE_DIR} "Graphics/OpenGL/*.c")

FILE(GLOB_RECURSE PIPELINE_HEADER ${PROJECT_SOURCE_DIR} "Graphics/Pipeline/*.h")
FILE(GLOB_RECURSE PIPELINE_SRC ${PROJECT_SOURCE_DIR} "Graphics/Pipeline/*.cpp")

FILE(GLOB_RECURSE IMAGING_HEADER ${PROJECT_SOURCE_DIR} "Imaging/*.h")
FILE(GLOB_RECURSE IMAGING_SRC ${PROJECT_SOURCE_DIR} "Imaging/*.cpp")

FILE(GLOB_RECURSE UTILS_HEADER ${PROJECT_SOURCE_DIR} "Utils/*.h")
FILE(GLOB_RECURSE UTILS_SRC ${PROJECT_SOURCE_DIR} "Utils/*.cpp")

FILE(GLOB CONSOLE_HEADER "Console/*.h")
FILE(GLOB CONSOLE_SRC "Console/*.cpp")

FILE(GLOB COMMON_HEADER "Common/*.h")
FILE(GLOB COMMON_SRC "Common/*.cpp")

SET(PrecompileHeader
  ${CMAKE_CURRENT_SOURCE_DIR}/Common.h
  ${CMAKE_CURRENT_SOURCE_DIR}/Common.cpp)

# setup groups for source file
SOURCE_GROUP("App" FILES ${APP_SRC} ${APP_HEADER})
IF(WIN32)
  SOURCE_GROUP("App\\Windows" FILES ${APP_WIN32_SRC} ${APP_WIN32_HEADER})
ENDIF(WIN32)

SOURCE_GROUP("App\\Qt" FILES ${QT_SRC} ${QT_HEADER})

SOURCE_GROUP(Graphics FILES
  ${GRAPHICS_SRC} ${GRAPHICS_HEADER} ${GRAPHICS_C_SRC})
SOURCE_GROUP(Imaging FILES ${IMAGING_SRC} ${IMAGING_HEADER})
SOURCE_GROUP(Utils FILES ${UTILS_SRC} ${UTILS_HEADER})
SOURCE_GROUP(Common FILES ${COMMON_SRC} ${COMMON_HEADER}
  ${PrecompileHeader})
SOURCE_GROUP("Graphics\\OpenGL" FILES
  ${OPENGL_C_SRC} ${OPENGL_HEADER} ${OPENGL_SRC})
SOURCE_GROUP("Graphics\\Pipeline" FILES
  ${PIPELINE_SRC} ${PIPELINE_HEADER})
SOURCE_GROUP(Mesh FILES ${MESH_SRC} ${MESH_HEADER})
SOURCE_GROUP(Entity FILES ${ENTITY_SRC} ${ENTITY_HEADER})
SOURCE_GROUP(Console FILES ${CONSOLE_HEADER} ${CONSOLE_SRC})

ADD_DEFINITIONS(-DILUT_USE_OPENGL
  -DLIBFRAMEWORK_EXPORTS
  -DGLEW_BUILD
  -DCRT_SECURE_NO_WARNINGS)

INCLUDE_DIRECTORIES(
  ${CMAKE_CURRENT_BINARY_DIR}
  ${CMAKE_CURRENT_SOURCE_DIR}
  ${PROJECT_SOURCE_DIR}/../../Dependencies/Include
  ${PROJECT_SOURCE_DIR}
  )

LINK_DIRECTORIES(${launcher_SOURCE_DIR}/../../Dependencies/Lib)

# Setup sources to compile
SET(FrameSourcesCpp
  ${APP_SRC}
  ${APP_WIN32_SRC}
  ${QT_SRC} ${QT_GENERATED_SRC}
  ${CONSOLE_SRC}
  ${GRAPHICS_SRC}
  ${OPENGL_SRC} ${PIPELINE_SRC}
  ${IMAGING_SRC}
  ${UTILS_SRC}
  ${COMMON_SRC}
  ${MESH_SRC}
  ${ENTITY_SRC}
  )

SET(FrameSourcesCppHeader
  ${APP_HEADER}
  ${APP_WIN32_HEADER}
  ${QT_HEADER}
  ${CONSOLE_HEADER}
  ${GRAPHICS_HEADER}
  ${OPENGL_HEADER}
  ${PIPELINE_HEADER}
  ${IMAGING_HEADER}
  ${UTILS_HEADER}
  ${COMMON_HEADER}
  ${MESH_HEADER}
  ${ENTITY_HEADER}
  )
SET(FrameSourceC
  ${OPENGL_C_SRC})

# Setup libraries to link
SET(FrameLibraries freeimage Cg CgGL ${QT_LIBRARIES})

IF(WIN32)
  LIST(APPEND FrameLibraries opengl32 GLU32)
ENDIF(WIN32)

IF(UNIX)
  LIST(APPEND FrameLibraries GLU)

  SET(CMAKE_SHARED_LINKER_FLAGS "-std=c++11")
ENDIF(UNIX)

ADD_LIBRARY(Framework SHARED
  ${FrameSourcesCpp} ${FrameSourcesCppHeader}
  ${FrameSourceC})

# Link Framework against freeimage
TARGET_LINK_LIBRARIES(Framework
  ${FrameLibraries}
  ${PrecompileHeader}
  )

# Precompiled header
ADD_PRECOMPILED_HEADER(Framework
  Common.h Common.cpp FrameSourcesCpp)

SET(EXECUTABLE_OUTPUT_PATH ${GLOBAL_OUTPUT_PATH})
SET(LIBRARY_OUTPUT_PATH ${GLOBAL_OUTPUT_PATH})
SET(ARCHIVE_OUTPUT_PATH ${GLOBAL_OUTPUT_PATH})

IF(MSVC10)
  SET_TARGET_PROPERTIES(Framework PROPERTIES PREFIX "../")
  SET_TARGET_PROPERTIES(Framework PROPERTIES IMPORT_PREFIX "../")
ENDIF(MSVC10)