CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(HelloWorld)

FILE(GLOB HW_HEADER "*.h")
FILE(GLOB HW_SRC "*.cpp")
MESSAGE("HEADER: ${HW_HEADER}, SRC: ${HW_SRC}")
ADD_EXECUTABLE(HelloWorld ${HW_SRC} ${HW_HEADER})

TARGET_LINK_LIBRARIES(HelloWorld Framework)

SET(EXECUTABLE_OUTPUT_PATH ${GLOBAL_OUTPUT_PATH})
SET(LIBRARY_OUTPUT_PATH ${GLOBAL_OUTPUT_PATH})
