CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(HelloWorld)

FILE(GLOB HW_HEADER "*.h")
FILE(GLOB HW_SRC "*.cpp")


IF(WIN32)
  ADD_EXECUTABLE(HelloWorld WIN32 ${HW_SRC} ${HW_HEADER})
ELSE(WIN32)
  ADD_EXECUTABLE(HelloWorld ${HW_SRC} ${HW_HEADER})
ENDIF(WIN32)
TARGET_LINK_LIBRARIES(HelloWorld Framework)

SET(EXECUTABLE_OUTPUT_PATH ${GLOBAL_OUTPUT_PATH})
SET(LIBRARY_OUTPUT_PATH ${GLOBAL_OUTPUT_PATH})
