CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(HelloWorld)

FILE(GLOB HW_HEADER "*.h")
FILE(GLOB HW_SRC "*.cpp")


IF(WIN32)
  ADD_EXECUTABLE(HelloWorld WIN32 ${HW_SRC} ${HW_HEADER})
ELSE(WIN32)
  ADD_EXECUTABLE(HelloWorld ${HW_SRC} ${HW_HEADER})
ENDIF(WIN32)

INCLUDE_DIRECTORIES(
  ${CMAKE_CURRENT_BINARY_DIR}
  ${CMAKE_CURRENT_SOURCE_DIR}
  "${GLOBAL_ROOT}/src/Framework"
  )

SET(CMAKE_CXX_FLAGS_DEBUG "-g -std=c++11")
SET(CMAKE_CXX_FLAGS "-std=c++11")

MESSAGE("TEST2: ${CMAKE_CXX_FLAGS_DEBUG}")

TARGET_LINK_LIBRARIES(HelloWorld Framework)

SET(EXECUTABLE_OUTPUT_PATH ${GLOBAL_OUTPUT_PATH})
SET(LIBRARY_OUTPUT_PATH ${GLOBAL_OUTPUT_PATH})
